--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -219,18 +219,39 @@ HostnameLookups Off
 #
 DocumentRoot "/app/www/public"
 <Directory "/app/www/public">
-	Options Indexes FollowSymLinks MultiViews                
-	RewriteEngine On
-	AllowOverride None
-	Order allow,deny
-	allow from all
+    #
+    # Possible values for the Options directive are "None", "All",
+    # or any combination of:
+    #   Indexes Includes FollowSymLinks SymLinksifOwnerMatch ExecCGI MultiViews
+    #
+    # Note that "MultiViews" must be named *explicitly* --- "Options All"
+    # doesn't give it to you.
+    #
+    # The Options directive is both complicated and important.  Please see
+    # http://httpd.apache.org/docs/2.4/mod/core.html#options
+    # for more information.
+    #
+    Options Indexes FollowSymLinks
 
-	RewriteCond %{HTTP_HOST} ^guildbox.com [NC]
-	RewriteRule ^(.*)$ http://www.guildbox.com/$1 [L,R=301,NC]
+    #
+    # AllowOverride controls what directives may be placed in .htaccess files.
+    # It can be "All", "None", or any combination of the keywords:
+    #   Options FileInfo AuthConfig Limit
+    #
+    AllowOverride All
+
+    #
+    # Controls who can get stuff from this server.
+    #
+    Require all granted
+
+	RewriteCond %{HTTP_HOST} ^linkme.io [NC]
+	RewriteRule ^(.*)$ http://www.linkme.io/$1 [L,R=301,NC]
 
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule ^(.*)$ index.php/$1 [L]
+
 </Directory>
 
 <IfModule mod_fastcgi.c>
